--- a/com.vreshly/com.vreshly.csproj
+++ b/com.vreshly/com.vreshly.csproj
@@ -14,6 +14,7 @@
     <Folder Include="Views\Subcategory\" />
     <Folder Include="wwwroot\Uploads\" />
     <Folder Include="wwwroot\Uploads\Brand\" />
+    <Folder Include="Views\Brand\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BLL\BLL.csproj">
