--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -8,6 +8,8 @@
     <Folder Include="Entities\" />
     <Folder Include="Data\" />
     <Folder Include="Specifications\" />
+    <Folder Include="Entities\Identity\" />
+    <Folder Include="Infrastructure\Identity\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5" />
@@ -16,5 +18,9 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="StackExchange.Redis" Version="2.2.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.6" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.11.1" />
+    <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="6.11.1" />
   </ItemGroup>
 </Project>
