--- a/com.vreshly/com.vreshly.csproj
+++ b/com.vreshly/com.vreshly.csproj
@@ -21,6 +21,7 @@
     <Folder Include="wwwroot\frontendassets\" />
     <Folder Include="Views\Shop\" />
     <Folder Include="Views\Account\" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BLL\BLL.csproj">
@@ -34,6 +35,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.6" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\frontendassets\images\slider\2-1.jpg" />
