--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -10,6 +10,7 @@
     <Folder Include="Specifications\" />
     <Folder Include="Entities\Identity\" />
     <Folder Include="Infrastructure\Identity\" />
+    <Folder Include="Infrastructure\Services\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5" />
@@ -22,5 +23,6 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.11.1" />
     <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="6.11.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.11.1" />
   </ItemGroup>
 </Project>
