--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -11,6 +11,8 @@
     <Folder Include="Entities\Identity\" />
     <Folder Include="Infrastructure\Identity\" />
     <Folder Include="Infrastructure\Services\" />
+    <Folder Include="Entities\OrderAggregate\" />
+    <Folder Include="Data\Config\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5" />
