--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -13,6 +13,7 @@
     <Folder Include="Infrastructure\Services\" />
     <Folder Include="Entities\OrderAggregate\" />
     <Folder Include="Data\Config\" />
+    <Folder Include="Infrastructure\Paystack\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5" />
@@ -26,5 +27,8 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.11.1" />
     <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="6.11.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.11.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Infrastructure\Paystack\" />
   </ItemGroup>
 </Project>
